ix/jx bug fixed

--- a/02/ModelAnalysis_and_background_upperair.ipynb
+++ b/02/ModelAnalysis_and_background_upperair.ipynb
@@ -104,8 +104,8 @@
    "outputs": [],
    "source": [
     "mlevel=64\n",
-    "tml_point_forecast_1 = forecast_1['air_temperature_ml'].isel(hybrid=mlevel, y = ix, x=jx)\n",
-    "tml_point_forecast_2 = forecast_2['air_temperature_ml'].isel(hybrid=mlevel, y = ix, x=jx)"
+    "tml_point_forecast_1 = forecast_1['air_temperature_ml'].isel(hybrid=mlevel, y = jx, x=ix)\n",
+    "tml_point_forecast_2 = forecast_2['air_temperature_ml'].isel(hybrid=mlevel, y = jx, x=ix)"
    ]
   },
   {
